CHANGES for LIRE
================

2012-07-23
==========
  - Updated libs in samples.
  - Updated build.xml
  - refactored name of surf visual words index field

2012-07-16
==========
  - Updated Lucene to version 3.6
  - Cleaned up directory structure and libraries

2012-02-28
==========
  - Liredemo: Fixed bug in ParallelIndexer.
  - LireDemo release 0.9.1

2012-02-24
==========
  - Added HashingUtils for simple Hashing

2012-02-22
==========
  - Added fix for grey scale only images ready to use in ImageUtils.java

2012-02-21
==========
  - Fixed MSER issues by implementing grey scale conversion & inversion myself.

2011-11-09
==========
  - Optimized k-means to use float[] instead of Histogram removing unnecessary object
    overhead and memory usage
  - Added TopDocsImageSearcher to pre-filter based on lucene searches

2011-11-08
==========
  - Updated to Lucene 3.4.0

2011-11-04
==========
  - Added Method for document creation LocalFeatureHistogramBuilder to allow for queries based on
    documents not in the index.
  - Added TestParallelIndexer.java to LireDemo to have a simple class for indexing without GUI
  - Added VisualWordsTest for testing new functions.

2011-10-24
==========
  - Killed a nasty bug in SimpleResult.java, which had something to do with the hash values in Object comparison.

2011-10-18
==========
  - Unified implementation for BoVW in package net.semanticmetadata.lire.imageanalysis.bovw;
  - Moved SIFT, SURF and MSER implementations there
  - Removed individual searchers for BoVW search, now all done with VisualWordsImageSearcher
  - added SURF BoVW to LireDemo
  - tested and fixed "indexMissing()" for BoVW
  - Added read only flag to index readers in lire demo to speed up things a little
  - Added progress indicator and prediction

2011-10-17
==========
  - Parallelled histogram creation for SURF BoVWs

2011-10-13
==========
  - Added ParallelKMeans for utilizing 4 Threads in the course of KMeans clustering